Tests/bad/myBadTests/redefined_functions3.lat
int main() {
  foo(5);
  return 0 ;
}

void foo(int x) {
  printString("foo");
  return;
}

void foo(int x) {
  printString("BOO");
  return;
}